[tool.poetry]
name = "rocshers"
version = "0.1.0"
description = ""
authors = ["Bekhruz Muminov <xyz@odoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
